--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,15 @@
 buildscript {
 	ext {
 		springBootVersion = '1.4.3.RELEASE'
-		jacocoVersion = '0.7.5'
-		buildDir = 'build'
-		scanOutputDir = 'build/logs'
+		
 	}
 	
 	
 	
 	repositories {
+		maven{
+			url 'http://repo.spring.io/milestone'
+		}
 		mavenCentral()
 	}
 	dependencies {
@@ -16,20 +17,10 @@ buildscript {
 	}
 }
 
-task makeDirectories << {
-	mkdir(buildDir)
-	mkdir(scanOutputDir)
-}
-
-task phpcs(type:Exec, description:"Find checksyle"){
-	executable scaCmdTemplete(name)
-		args "--report=checkstyle", "--report-file=build/logs/phpcs.xml", sourceDir, "--standard=spring-boot.xml", "--runtime-set", "ignore_warnings_on_exit", "1"
-}
-
-
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
+apply from : "sca.gradle"
 
 
 jar {
@@ -50,5 +41,17 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web','org.apache.tomcat.embed:tomcat-embed-jasper'
 	,'javax.servlet:jstl')
+	testCompile('org.springframework.boot:spring-boot-starter-jetty')	
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testCompile('org.springframework.boot:spring-boot-starter-actuator')
+	
+	testCompile("junit:junit")
+}
+
+repositories
+{
+	maven{
+		url 'http://repo.spring.io/milestone'
+	}
+	mavenCentral()
 }
